force-app/main/default/objects/GfNotice__c/GfNotice__c.object-meta.xml
<CustomObject>
    <label>공지사항</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>