force-app/main/default/objects/GfNotice__c/fields/HoldTopEndDate__c.field-meta.xml
<CustomField>
    <fullName>HoldTopEndDate__c</fullName>
    <label>Hold Top End Date</label>
    <type>DateTime</type>
</CustomField>