force-app/main/default/objects/GfNotice__c/fields/HoldTopStartDate__c.field-meta.xml
<CustomField>
    <fullName>HoldTopStartDate__c</fullName>
    <label>Hold Top Start Date</label>
    <type>DateTime</type>
</CustomField>