force-app/main/default/objects/GfNotice__c/fields/NoticeContents__c.field-meta.xml
<CustomField>
    <fullName>NoticeContents__c</fullName>
    <label>Notice Contents</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>